<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/cv">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Card type"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:textSize="18sp"
                android:textStyle="bold"
                />


            <!-- ID No. Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_no"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="2dip"
                android:textSize="12sp"/>

            <!-- Input IDNumber -->
            <TextView android:id="@+id/inputIDNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:background="#cccccc"
                android:textColor="#000"
                android:text="hello"
                android:padding="6dp"/>

            <!-- Name Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_on_id"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="2dip"
                android:textSize="12sp"/>

            <!-- Input Name -->
            <TextView android:id="@+id/inputIDName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="5dip"
                android:background="#cccccc"
                android:textColor="#000"
                android:text="hello"
                android:padding="6dp"/>

            <!-- ExpiryDate Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="2dip"
                android:textSize="12sp"/>

            <!-- Input ExpiryDate -->
            <TextView android:id="@+id/inputExpiryDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="5dip"
                android:background="#cccccc"
                android:textColor="#000"
                android:text="hello"
                android:padding="6dp"/>

            <!-- Nationality Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nationality"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="2dip"
                android:textSize="12sp"/>

            <!-- Input nationality -->
            <TextView android:id="@+id/inputNationality"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_marginBottom="15dip"
                android:gravity="top"
                android:background="#cccccc"
                android:textColor="#000"
                android:text="hello"
                android:padding="6dp"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>